attributes da page

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "bezhansalleh/filament-language-switch": "^3.1",
         "brunocfalcao/blade-feather-icons": "^4.0",
         "filament/filament": "^3.2",
+        "guava/filament-nested-resources": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
