--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
-        "sass": "^1.77.0"
+        "sass": "^1.77.0",
+        "swiper": "^11.1.1"
     }
 }
