--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "aos": "^3.0.0-beta.6",
         "bootstrap": "^5.3.3",
         "sass": "^1.77.0",
         "swiper": "^11.1.1"
