--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mallardduck/blade-boxicons": "^2.4",
+        "mckenziearts/blade-untitledui-icons": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
