--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "mallardduck/blade-boxicons": "^2.4",
-        "mckenziearts/blade-untitledui-icons": "^1.3"
+        "mckenziearts/blade-untitledui-icons": "^1.3",
+        "psr/simple-cache": "^2.0",
+        "pxlrbt/filament-excel": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
