--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "bezhansalleh/filament-language-switch": "^3.1",
         "brunocfalcao/blade-feather-icons": "^4.0",
         "codeat3/blade-ikonate": "^1.5",
+        "codeat3/blade-phosphor-icons": "^2.2",
         "codeat3/blade-unicons": "^1.8",
         "filament/filament": "^3.2",
         "guava/filament-nested-resources": "^1.0",
@@ -23,7 +24,8 @@
         "mallardduck/blade-boxicons": "^2.4",
         "mckenziearts/blade-untitledui-icons": "^1.3",
         "psr/simple-cache": "^2.0",
-        "pxlrbt/filament-excel": "^2.3"
+        "pxlrbt/filament-excel": "^2.3",
+        "ryangjchandler/blade-tabler-icons": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
