--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "codeat3/blade-ikonate": "^1.5",
         "codeat3/blade-phosphor-icons": "^2.2",
         "codeat3/blade-unicons": "^1.8",
+        "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "filament/filament": "^3.2",
         "guava/filament-nested-resources": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
