--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Filament-CMS
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:cuT1uo25JzwFJQ5Mruk2RhWcOCEuz6h6mFpxN0/7Ul8=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://3.145.89.126
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
