--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,80 @@
+version: "3.7"
+
 services:
-    laravel:
+    php-fpm:
         container_name: "${APP_NAME}_APPLICATION"
         build:
-            context: ./vendor/laravel/sail/runtimes/8.3
-            dockerfile: Dockerfile
+            context: .
             args:
-                WWWGROUP: "${WWWGROUP}"
-        image: sail-8.3/app
+                - UID=${UID:-1000}
+                - GID=${GID:-1000}
+                - DB_PROD_HOST
+                - DB_PROD_PORT=${DB_PROD_PORT:-3306}
+                - SSH_PROD_USER
+                - SSH_PROD_SERVER
+                - SSH_MYSQL_FORWARD_PORT=${SSH_MYSQL_FORWARD_PORT:-3307}
+        user: "1000:1000"
         restart: unless-stopped
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
-        ports:
-            - "${APP_PORT:-80}:80"
-            - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
-        environment:
-            WWWUSER: "${WWWUSER}"
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: "${SAIL_XDEBUG_MODE:-off}"
-            XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
-            IGNITION_LOCAL_SITES_PATH: "${PWD}"
-        volumes:
-            - ".:/var/www/html"
         networks:
-            - sail
-        depends_on:
-            - mysql
-    mysql:
+            - default_network
+        volumes:
+            - ./:/var/www/html
+            - ./config/php/php.ini:/usr/local/etc/php/php.ini
+
+    nginx:
+        tty: true
+        image: nginx:alpine
+        container_name: "${APP_NAME}_NGINX"
+        restart: unless-stopped
+        ports:
+            - 80:80
+            - 443:443
+        networks:
+            - default_network
+        volumes:
+            - ./:/var/www/html
+            - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+
+    db:
         container_name: "${APP_NAME}_DB"
-        image: "mysql/mysql-server:8.0"
+        image: mariadb
+        restart: unless-stopped
+        environment:
+            - MYSQL_USER=${DB_USERNAME}
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
+            - MYSQL_DATABASE=${DB_DATABASE}
+        ports:
+            - 3306:3306
+        networks:
+            - default_network
+        volumes:
+            - data_volume:/var/lib/mysql
+
+    cache:
+        container_name: "${APP_NAME}_REDIS"
+        image: redis
         restart: unless-stopped
         ports:
-            - "${FORWARD_DB_PORT:-3306}:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-            MYSQL_ROOT_HOST: "%"
-            MYSQL_DATABASE: "${DB_DATABASE}"
-            MYSQL_USER: "${DB_USERNAME}"
-            MYSQL_PASSWORD: "${DB_PASSWORD}"
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        volumes:
-            - "sail-mysql:/var/lib/mysql"
-            - "./vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
+            - "6379:6379"
         networks:
-            - sail
-        healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - "-p${DB_PASSWORD}"
-            retries: 3
-            timeout: 5s
-networks:
-    sail:
-        driver: bridge
+            - default_network
+
+    phpmyadmin:
+        container_name: "${APP_NAME}_PHPMYADMIN"
+        image: phpmyadmin/phpmyadmin:latest
+        ports:
+            - 8080:80
+        networks:
+            - default_network
+        environment:
+            - PMA_ARBITRARY=1
+            - UPLOAD_LIMIT=350M
+            - PMA_HOST=mariadb
+
 volumes:
-    sail-mysql:
+    data_volume:
         driver: local
+networks:
+    default_network:
+        driver: bridge
