--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Filament-CMS
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:cuT1uo25JzwFJQ5Mruk2RhWcOCEuz6h6mFpxN0/7Ul8=
-APP_DEBUG=false
-APP_URL=http://3.145.89.126
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
