melhora pro deploy

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "andreiio/blade-remix-icon": "^3.2",
         "bezhansalleh/filament-language-switch": "^3.1",
+        "blade-ui-kit/blade-heroicons": "^2.3",
         "brunocfalcao/blade-feather-icons": "^4.0",
         "codeat3/blade-ikonate": "^1.5",
         "codeat3/blade-phosphor-icons": "^2.2",
