--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} ' cd cms-filament && git pull origin master &&  sudo docker exec -it Filament-CMS_APPLICATION npm run build
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} ' cd ${{ secrets.TARGET_DIR }} && git pull origin master &&  sudo docker exec -it Filament-CMS_APPLICATION npm run build
