--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-218-29-206.us-east-2.compute.amazonaws.com ' cd ${{ secrets.TARGET_DIR }} && git pull origin master &&  sudo docker exec -it Filament-CMS_APPLICATION npm run build
+          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-218-29-206.us-east-2.compute.amazonaws.com ' cd cms-fillament && git pull origin master &&  sudo docker exec -it Filament-CMS_APPLICATION npm run build
