--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,12 +1,15 @@
 name: CI Pipeline
 
 on:
-  push:
+  pull_request:
     branches:
       - master
+    types:
+      - closed
 
 jobs:
   check-application:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
