--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=laravel
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -57,3 +57,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FILAMENT_FILESYSTEM_DISK=s3
+AWS_ACCESS_KEY_ID=***
+AWS_SECRET_ACCESS_KEY=****
+AWS_DEFAULT_REGION="us-east-2"
+AWS_BUCKET=***
+FILAMENT_FILESYSTEM_DISK=s3
