--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,11 +1,9 @@
 name: CI Pipeline
 
 on:
-  pull_request:
+  push:
     branches:
       - master
-    types:
-      - closed
 
 jobs:
   check-application:
@@ -23,15 +21,17 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-216-55-80.us-east-2.compute.amazonaws.com 'cd cms-filament && 
-            git reset --hard HEAD &&
-            git pull origin master && 
-            sudo docker exec Filament-CMS_APPLICATION php artisan down &&
-            sudo docker exec Filament-CMS_APPLICATION npm run build &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan migrate &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan config:cache &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan route:cache && 
-            sudo docker exec Filament-CMS_APPLICATION composer dump-autoload -o &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan optimize &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan icons:cache &&
-            sudo docker exec Filament-CMS_APPLICATION php artisan up'
+          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-216-55-80.us-east-2.compute.amazonaws.com << EOF
+            cd cms-filament
+            git reset --hard HEAD
+            git pull origin master
+            sudo docker exec Filament-CMS_APPLICATION php artisan down
+            sudo docker exec Filament-CMS_APPLICATION npm run build
+            sudo docker exec Filament-CMS_APPLICATION php artisan migrate
+            sudo docker exec Filament-CMS_APPLICATION php artisan config:cache
+            sudo docker exec Filament-CMS_APPLICATION php artisan route:cache
+            sudo docker exec Filament-CMS_APPLICATION composer dump-autoload -o
+            sudo docker exec Filament-CMS_APPLICATION php artisan optimize
+            sudo docker exec Filament-CMS_APPLICATION php artisan icons:cache
+            sudo docker exec Filament-CMS_APPLICATION php artisan up
+          EOF
