--- a/.env.example
+++ b/.env.example
@@ -15,18 +15,20 @@ DB_DATABASE=laravel
 DB_USERNAME=laravel
 DB_PASSWORD=laravel
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=s3
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=file
+SESSION_LIFETIME=50000
+
+REDIS_HOST_CLUSTER=
+REDIS_PASSWORD_CLUSTER=null
+REDIS_PORT_CLUSTER=7000
+REDIS_CLUSTER_ENABLED=false
+
+REDIS_HOST=cache
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
@@ -59,8 +61,8 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILAMENT_FILESYSTEM_DISK=s3
-AWS_ACCESS_KEY_ID=***
-AWS_SECRET_ACCESS_KEY=****
-AWS_DEFAULT_REGION="us-east-2"
-AWS_BUCKET=***
-FILAMENT_FILESYSTEM_DISK=s3
+FILESYSTEM_DISK=s3
+AWS_ACCESS_KEY_ID=****
+AWS_SECRET_ACCESS_KEY=*****
+AWS_DEFAULT_REGION=us-east-2
+AWS_BUCKET=glabsstorage
