--- a/.env.example
+++ b/.env.example
@@ -65,4 +65,4 @@ FILESYSTEM_DISK=s3
 AWS_ACCESS_KEY_ID=****
 AWS_SECRET_ACCESS_KEY=*****
 AWS_DEFAULT_REGION=us-east-2
-AWS_BUCKET=glabsstorage
+AWS_BUCKET=****
