--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "filament/filament": "^3.2",
         "guava/filament-nested-resources": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jdavidbakr/cloudfront-proxies": "^1.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
